# vm_fall_detection

./: .gitignore  FILTER_PARAMS_GUIDE.md  OPTIMIZATION_GUIDE.md  README.md  bytetrack.yaml  config.yaml  export_onnx.py  requirements.txt  track_fall_inference.py  track_pose_inference.py  train_fall_detection.py  train_pose_sequence.py  yolo_pose_inference.py
docs/: EXPORT_ONNX_GUIDE.md  MODEL_NAMING.md  OPTIMIZATION_GUIDE.md
sdk/: CMakeLists.txt  README.md  build.sh  config.json  run_inference.sh
sdk/include/: activity_detector.h  config_loader.h  fall_detector.h  pose_inferencer.h  tracker.h  vmsdk.h
sdk/src/: activity_detector.cpp  config_loader.cpp  fall_detector.cpp  main.cpp  pose_inferencer.cpp  tracker.cpp  vmsdk.cpp
src/evaluation/: evaluate.py
src/models/: __init__.py  bilstm_attention.py  fall_detection_gru.py  fall_detection_lstm.py  gru.py  improved_lstm.py  lstm.py  physical_rules.py  transformer.py  vae.py
src/training/: __init__.py  train_model.py  utils.py
src/utils/: __init__.py  augmentation.py  body.py  extract_keypoints_from_video.py  organize_training_videos_segments.py  pose_buffer.py  reduce_video_fps.py  video_detect_falls.py  visualize_keypoints_sequences.py
